self_hosted/k8s/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: production
spec:
  selector:
    app: ntfy
  ports:
  - port: 80
    targetPort: 80
